# perudo

./: .gitignore  README.md  pyproject.toml
notebooks/: perudo_inference.ipynb
perudo/: __init__.py  agents.py  bids.py  cli.py  dice.py  game.py  inference.py  probability.py  simulate.py
tests/: test_agents.py  test_bids.py  test_cli.py  test_dice.py  test_game.py  test_inference.py  test_probability.py  test_scaffold.py  test_simulate.py
